--- a/source/deprecations/v1.x.html.md
+++ b/source/deprecations/v1.x.html.md
@@ -748,6 +748,18 @@ aims to provide a select component based on the native html select. Alternative
 best practices and perhaps moved into an official Ember 2.x implementation in
 the future.
 
+#### Ember.ContainerView
+
+`Ember.ContainerView` is deprecated as a consequence of the deprecation of `Ember.View`.
+
+Legacy support of `Ember.ContainerView` will be provided via the [ember-legacy-views](https://github.com/emberjs/ember-legacy-views) addon.
+
+#### Ember.CollectionView
+
+
+Legacy support of `Ember.CollectionView` will be provided via the [ember-legacy-views](https://github.com/emberjs/ember-legacy-views) addon.
+
+
 #### Ember.ReduceComputed / Ember.ArrayComputed
 
 This two little monsters served us well for a long time. They provided semantics that allowed to
